refactor: Additional Java 25 refinements for logging and procletService
- YLogServer: further var locals, String.formatted() improvements
- BlockCP, BlockPI, BlockPICreate: diamond inference cleanup
- Performatives: additional isBlank/strip/StringBuilder modernizations

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF